wasm/python-api-server/k8s/http-echo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: http-echo
  labels:
    app: http-echo
spec:
  selector:
    matchLabels:
      app: http-echo
      tier: web
  template:
    metadata:
      labels:
        app: http-echo
        tier: web
    spec:
      containers:
      - name: http-echo
        image: patrickeast/http-echo
        ports:
        - containerPort: 8080
