wasm/python-api-server/k8s/http-echo-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: http-echo-backend
  labels:
    app: hello
spec:
  type: NodePort
  selector:
    app: http-echo
    tier: web
  ports:
  - port: 8080
    targetPort: 8080
